drkns 07.04.2020 02:46:13 +0300 - build 5580

1. Изменён формат флагов фильтров в базе данных (задел на будущее - хранить блобы было не самой лучшей идеей).
   В целях совместимости пока поддерживается чтение старого формата.

yjh 03.04.2020 12:03:46 +0300 - build 5579

1. Добавлена настройка Panel.ReverseSortCharCompat - при установке её
   в true отображение обратных режимов сортивоки происходит так же как
   в Far2/Far1 (маленька буква обратный порядок, большая - прямой).

drkns 28.03.2020 15:58:39 +0200 - build 5578

1. Рефакторинг.

2. Минимальная версия gcc - 8.1.

drkns 26.03.2020 19:19:19 +0200 - build 5577

1. Новые версии fmt, tinyxml2, Catch2.

drkns 26.03.2020 00:44:00 +0200 - build 5576

1. Уточнение 5570 - кеш плагинов мог работать некорректно.

drkns 24.03.2020 01:10:31 +0200 - build 5575

1. gh-45: Editor: Очень странный баг позиции курсора

2. Уточнение 5554 - визуальные артефакты при изменении размеров консоли.

drkns 22.03.2020 16:09:56 +0200 - build 5574

1. Можно было испортить стек, переключая главное меню мышью.

drkns 22.03.2020 13:47:01 +0200 - build 5573

1. Ещё на тему юникода и отладки.

drkns 22.03.2020 12:46:20 +0200 - build 5572

1. Пара уточнений 5571.

drkns 22.03.2020 01:25:01 +0200 - build 5571

1. 0003313: FCTL_SETPANELDIRECTORY not working for certain types of paths.

2. Результаты поиска могли иногда включать результаты предыдущего поиска.

3. Используются юникодные функции DbgHelp (если есть).

4. Рефакторинг.

MZK 11.03.2020 23:03:40 -0700

1. Перевёл на английский ещё несколько страниц справки far:config; почистил eng/TechInfo.txt.

drkns 11.03.2020 18:14:35 +0000 - build 5570

1. Немного магии для работы wow64 хука в VS2019.

2. Рефакторинг.

zg 10.03.2020 00:35:41 +0200 - build 5569

1. падение в SettingsControl, если в качестве названия настройки передать nullptr.

drkns 07.03.2020 22:21:15 +0000 - build 5568

1. Рефакторинг.

2. Больше тестов.

3. Продолжение 5567.

MZK 07.03.2020 12:45:31 -0800
