@@ -2379,11 +2379,11 @@ $ #Системные параметры#
  Обрабатывать ~символические ссылки~@HardSymLink@ наравне с обычными подкаталогами при построении дерева
 каталогов и определении суммарного размера файлов в подкаталогах.
 
- #Обновление панелей только если Фар активен#
- Если эта опция выставлена, то мониторинг файловых панелей Фар будет выполняться только тогда когда Фар активен,
-т.е. обновления панелей не будет до тех пор, пока Фар не получит фокус ввода. Это позволяет не блокировать каталоги текущих панелей.
+ #Обновление панелей только если Far активен#
+ Если эта опция выставлена, то мониторинг файловых панелей Far будет выполняться только тогда когда Far активен,
+т.е. обновления панелей не будет до тех пор, пока Far не получит фокус ввода. Это позволяет не блокировать каталоги текущих панелей.
 Однако, синхронизация состояния панелей при получении фокуса #иногда не срабатывает#,
-поэтому эта опция по умолчанию отключена и мониторинг файловых панелей выполняется даже тогда, когда Фар работает в фоне.
+поэтому эта опция по умолчанию отключена и мониторинг файловых панелей выполняется даже тогда, когда Far работает в фоне.
 
  #Сохранять историю команд#
  Вызывает сохранение ~истории команд~@History@ перед завершением и её восстановление после запуска Far.
@@ -2578,14 +2578,12 @@ $ #Настройка интерфейса#
 символов, позволяющий устранить эти артефакты, но это может несколько снизить
 скорость вывода.
 
- #Выставлять иконку консоли#
- При активации этой опции Фар будет сам устанавливать иконку своего окна,
-используя при этом встроенную иконку. Если эта опция не активна, то с помощью
-свойств запуска Фара можно установить любую желаемую иконку.
+ #Иконка консоли#
+ При активации этой опции Far установит выбранную встроенную иконку в качестве иконки своей консоли.
+В противном случае вы можете выбрать любую желаемую иконку в свойствах ярлыка Far в Windows.
 
  #Альтернативная для администратора#
- При активации этой опции Фар будет использовать красную иконку вместо синей
-в том случае, если Фар запущен пользователем, имеющим права администратора.
+ При активации этой опции Far будет использовать красную иконку при работе с правами администратора.
 
  #Дополнительная информация для заголовка окна#
  Дополнительная информация, выводимая в заголовке окна консоли.
