@@ -3,6 +3,12 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 11.04.2020 15:21:20 +0300 - build 5581
+
+1. Extend the "Interface / console icon" оption - now it's possible to choose which one to use.
+
+2. Refactoring.
+
 drkns 07.04.2020 02:46:13 +0300 - build 5580
 
 1. Changed the format of filter flags in the database (to make further changes possible - keeping blobs was not the best idea).
