@@ -2695,17 +2695,17 @@ upd:"ClearType-friendly redraw (can be slow)"
 "Перамалёўка з падтрымкай ClearType (можа быць марудным)"
 
 MConfigSetConsoleIcon
-"Выставлять иконку консоли"
-"Set console &icon"
-"Nastavit ikonu okna konzole"
-"Konsole anzeigen"
-upd:"Set console icon"
-"Ustaw iko&nę konsoli"
-"Poner ícono para ventana de consola"
-"Nastaviť ikonu konzoly"
-"Imposta Icona Far:"
-"Виставляти іконку консолі"
-"Прызначыць гузік кансолі"
+"Иконка консоли:"
+"Сonsole &icon:"
+"Ikona okna konzole:"
+"Konsole symbol:"
+upd:"Console icon:"
+"Iko&na konsoli:"
+"Icono de consola:"
+"Ikona konzoly:"
+"Icona di console:"
+"Іконка консолі:"
+"Гузік кансолі:"
 
 MConfigSetAdminConsoleIcon
 "Альтернативная для администратора"
