@@ -40,4 +40,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #define FAR_ICON_MONO        104
 #define FAR_ICON_MSG         105
 
+#define FAR_ICON_COUNT       6
+
 #endif // RES_HPP_3FBA510D_51EB_471B_BF55_1A3BD09B4E59
