@@ -1,3 +1,9 @@
+drkns 11.04.2020 15:21:20 +0300 - build 5581
+
+1. Расширена опция "Interface / console icon" - теперь можно выбрать, что именно использовать.
+
+2. Рефакторинг.
+
 drkns 07.04.2020 02:46:13 +0300 - build 5580
 
 1. Изменён формат флагов фильтров в базе данных (задел на будущее - хранить блобы было не самой лучшей идеей).
